Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML</title>
+        <meta charset="UTF-8" />
+        <title>tast_html</title>
+        <meta name="author" content="kristinka582"
     </head>
-    <body></body>
+    <body>
+        <h1>Основы HTML</h1>
+        <h2>Task 1</h2>
+        <ol>
+            <li>
+                <a href="https://github.com/kristinka582">Аккаунт на Github</a>
+            </li>
+            <li><a href="https://tensor.ru/">Сайт Тензора</a></li>
+            <li><a href="https://online.sbis.ru/">Сбис Онлайн</a></li>
+        </ol>
+    </body>
 </html>
